skin/base.css
/* ... */
#main-window[inFullscreen][inDOMFullscreen] #verticaltabs-box,
#main-window[inFullscreen][inDOMFullscreen] #verticaltabs-splitter {
  visibility: collapse;
}

#verticaltabs-box[expanded="true"] {
  width: 260px;
  box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1), inset 0 0 10px hsla(0, 0%, 0%, 0);
}

#browser-border-start {
  display: none !important;
}

#verticaltabs-splitter {
  position: relative !important;
  z-index: 99 !important;
  display: none;
  margin-left: calc(var(--pinned-width) - 3px);
  margin-right: -1px !important;
  max-width: 4px;
  min-width: 4px;
  width: 4px;
  background-color: transparent;
  cursor: ew-resize;
}

#main-window[tabspinned="true"] #verticaltabs-splitter {
  display: -moz-box;
}

#main-window[tabspinned="true"] #verticaltabs-box {
  width: var(--pinned-width);
  box-shadow: none;
  transition: box-shadow 0ms ease-in-out 0ms;
}

#alltabs-button {
  visibility: hidden;
}

#TabsToolbar > #pin-button {
  width: 32px;
  min-width: 32px;
  margin: 0 8px 0 4px !important;
  display: -moz-box;
  -moz-appearance: none !important;
  background-image: url("resource://tabcenter/skin/glyph-pin-16.svg") !important;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 16px;
  -moz-box-flex: 0;
  opacity: 0;
  transition: opacity 125ms ease-in-out 300ms;
}

#TabsToolbar > #find-tabs-button {
  width: 40px;
  margin: 0 !important;
  border: none !important;
  display: -moz-box;
}

#TabsToolbar > #find-tabs-button > .toolbarbutton-text {
  display: -moz-box;
}

#TabsToolbar > #find-tabs-button > .toolbarbutton-icon {
  display: none;
}

#TabsToolbar #find-input {
  border: 1px solid hsla(0, 0%, 0%, 0.16) !important;
  border-radius: 1px !important;
  display: flex;
  height: 26px;
  margin: 0 4px !important;
  padding: 0 !important;
  min-height: auto !important;
  align-items: center;
  flex: 1 0 auto;
  transition-duration: 0.1s;
  transition-property: border-color, box-shadow;
}

#TabsToolbar #find-input[focused="true"] {
  width: calc(100% - 95px) !important;
  border: 1px solid Highlight !important;
  box-shadow: 0 0 0 1px Highlight inset;
}

#tabs-search {
  width: 20px;
  flex: 0 0 auto;
  -moz-image-region: rect(0, 20px, 20px, 0);
  list-style-image: url("resource://tabcenter/skin/find.svg");
}

#TabsToolbar #find-input .textbox-input-box {
  padding: 0 !important;
  margin: 0 4px 0 0 !important;
  flex: 1 0 auto !important;
  vertical-align: middle;
}

#main-window[inFullscreen][inDOMFullscreen] #find-input {
  display: none;
}

#verticaltabs-box:not([expanded="true"]) #find-input {
  visibility: collapse !important;
}

#verticaltabs-box:not([expanded="true"]) #new-tab-spacer {
  visibility: visible !important;
}

#main-window[tabspinned="true"] #verticaltabs-box #pin-button {
  border: 1px solid hsla(0, 0%, 0%, 0.16) !important;
  background-color: hsla(0, 0%, 0%, 0.16) !important;
  background-image: url("resource://tabcenter/skin/glyph-pin-pinned-16.svg") !important;
  box-shadow: 0 0 0 1px hsla(0, 0%, 0%, 0.16) inset !important;
}

#main-window[lwthemetextcolor="bright"] #TabsToolbar[brighttext] #pin-button {
  background-image: url("resource://tabcenter/skin/glyph-pin-inverted-16.svg") !important;
}

#main-window[tabspinned="true"] #TabsToolbar[brighttext] #pin-button {
  background-image: url("resource://tabcenter/skin/glyph-pin-pinned-16.svg") !important;
}

#verticaltabs-box[expanded="true"] #pin-button,
#main-window[tabspinned="true"] #pin-button {
  opacity: 1;
}

#appcontent {
  top: 0;
  border-top: 1px solid rgb(160, 160, 160);
}

#sidebar-box,
#sidebar-box[hidden="true"] ~ #appcontent,
#sidebar-box[hidden="true"] ~ #PopupAutoCompleteRichResult {
  margin-left: var(--collapsed-width);
}

#main-window[tabspinned="true"] #sidebar-box,
#main-window[tabspinned="true"] #sidebar-box[hidden="true"] ~ #appcontent,
#main-window[tabspinned="true"] #sidebar-box[hidden="true"] ~ #PopupAutoCompleteRichResult {
  margin-left: 0;
}

#main-window[chromehidden*="toolbar"] #appcontent,
#main-window[chromehidden*="toolbar"] #sidebar-box[hidden="true"] ~ #appcontent {
  margin-left: 0;
}

#main-window[inFullscreen][inDOMFullscreen] #appcontent,
#main-window[inFullscreen][inDOMFullscreen] #PopupAutoCompleteRichResult {
  margin-left: 0 !important;
}

#navigator-toolbox,
.browserContainer,
#PopupAutoCompleteRichResult {
  width: calc(100vw - var(--collapsed-width));
}

#PopupAutoCompleteRichResult {
  margin-left: -32px !important;
}

#main-window[tabspinned="true"] #verticaltabs-box + #appcontent #navigator-toolbox,
#main-window[tabspinned="true"] #verticaltabs-box + #appcontent .browserContainer,
#main-window[tabspinned="true"] #PopupAutoCompleteRichResult {
  width: calc(100vw - var(--pinned-width));
}

#main-window[inFullscreen][inDOMFullscreen] .browserContainer
#main-window[inFullscreen][inDOMFullscreen] #PopupAutoCompleteRichResult {
  width: 100vw !important;
}

#main-window[inFullscreen][inDOMFullscreen] .browserContainer {
  margin-top: -1px;
}

.tabbrowser-tab {
  width: 260px !important;
  max-height: 36px;
  min-height: 36px;
  margin: 0 !important;
  margin-bottom: -1px !important;
  border: 0 !important;
  border-bottom: 1px solid hsla(0, 0%, 0%, 0.06) !important;
  border-radius: 0 !important;
  -moz-appearance: none !important;
  background: transparent !important;
  -moz-box-flex: 0;
  -moz-box-pack: start;
  color: #333 !important;
  transition: min-height 300ms, max-height 300ms !important;
}

.tabbrowser-tabs.large-tabs .tab-content,
.tabbrowser-tabs.large-tabs .tabbrowser-tab {
  max-height: 56px;
  min-height: 56px;
}

.title-wrapper {
  padding: 0 !important;
}

.title-wrapper .tab-text {
  margin-bottom: 0 !important;
  margin-top: 0 !important;
  font-weight: 400;
}

.tabbrowser-tabs.large-tabs .tab-text {
  font-weight: 600;
}

.title-wrapper .address-label {
  display: none;
  color: var(--link-color);
  font-weight: 400;
  opacity: 0.7;
}
/* ... */

